Glossary added
